@@ -6,6 +6,7 @@ ChangeLog
 2008-12-29   0.2.0.beta3 (20081229)
 	- sparql: "select" query now also process new "form" parameter, which can be
 	  "html" (the default) or csv.
+	- updated sparql.html page.
 
 2008-12-03   0.2.0.beta2 (20081203)
 	- Dispatch the "root" request to report information about this service, ie.
